--- a/sass/blocks/_container.scss
+++ b/sass/blocks/_container.scss
@@ -1,5 +1,18 @@
 .container {
-  width: 1380px;
+  width: 100%;
+  max-width: 71.875rem;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 1.25rem;
+}
+
+@media only screen and (max-width: 48rem) {
+  .container{
+    max-width: 43.063rem;
+  }
+}
+
+@media only screen and (max-width: 36rem) {
+  .container{
+    max-width: 20.438rem;
+  }
 }
