--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -13,6 +13,8 @@ body {
   flex-direction: column;
   height: 100%;
   margin: 0;
+  font-family: 'Livvic', sans-serif;
+  overflow-x: hidden;
 }
 
 main {
