--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,13 +1,151 @@
+.site-header{
+  background-color: $midnight-green;
+}
 
+.header__inner{
+  @include flex-starter;
+  padding: 4.813rem 0;
+}
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) { 
+.header__link{
+  margin-right: 5rem;
+}
+
+.header__menu{
+  width: 100%;
+}
+
+.menu__btn{
+  margin-bottom: 1.5rem;
+  margin-left: 8rem;
+}
+
+.menu__list{
+  @include flex-starter;
+  @include list-global;
+}
+
+.menu__item{
+  margin-right: 2.5rem;
+}
+
+.menu__link{
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  color: $white;
+  text-decoration: none;
+
+  &:hover{
+    color: $light-coral;
+    transition: all 0.2s ease;
+  }
+}
+
+.menu__btn{
+  display: none;
+  font-size: 2.25rem;
+  color: $white;
+  border: 0;
+  background-color: transparent;
+}
+
+.right{
+  margin-left: auto;
+}
+
+.menu__link--link{
+  padding: 0.625rem 1.9rem;
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-align: center;
+  text-decoration: none;
+  color: $white;
+  border: 0.125rem solid $white;
+  border-radius: 1.5rem;
   
+  &:hover{
+    color: $midnight-green;
+    background-color: $white;
+    transition: all 0.2s ease;
+  }
+}
 
+.header__btn{
+  display: none;
+  margin-left: auto;
+}
+
+.header__button{
+  font-size: 2.188rem;
+  color: $white;
+  border: 0;
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 48rem) {
+
+  .header__inner{
+    padding: 4.5rem 0;
+  }
   
-} 
+  .header__link{
+    margin-right: 3rem;
+  }
+}
+@media only screen and (max-width: 36.188rem) {
+  .menu__item{
+    margin-right: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 36rem) {
+
+  .header__inner{
+    padding: 3rem 0;
+  }
+
+  .menu__btn{
+    display: block;
+  }
+
+  .header__btn{
+    display: block;
+  }
+
+  .header__menu{
+    position: absolute;
+    top: -37.5rem;
+    right: 0;
+    width: 14.688rem;
+    height: 37.438rem;
+    padding: 2.5rem 0 0 3rem;
+    background-color: $police-blue;
+    transition: all 0.5s ease;
+    z-index: 2;
+
+    &--open {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("../images/tel-menu.svg");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    }
+  }
+
+  .menu__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menu__item{
+    margin-bottom: 2rem;
+  }
+
+  .right{
+    margin-left: 0;
+  }
+
+}
