add css file change

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -106,12 +106,21 @@
     padding: 3rem 0;
   }
 
+  .header__link-img{
+    width: 8rem;
+    height: 2rem;
+  }
+
   .menu__btn{
     display: block;
   }
 
   .header__btn{
     display: block;
+  }
+
+  .header__button{
+    font-size: 1.8rem;
   }
 
   .header__menu{
