--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -125,8 +125,8 @@
 
   .header__menu{
     position: absolute;
-    top: -37.5rem;
-    right: 0;
+    top: 0;
+    right: -20rem;
     width: 16rem;
     height: 37rem;
     padding: 2.5rem 0 0 3rem;
