--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -125,8 +125,8 @@
 
   .header__menu{
     position: absolute;
-    top: 0;
-    right: -20rem;
+    top: -37.5rem;
+    right: 0;
     width: 16rem;
     height: 37rem;
     padding: 2.5rem 0 0 3rem;
@@ -135,12 +135,13 @@
     z-index: 2;
 
     &--open {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url("../images/tel-menu.svg");
-    background-repeat: no-repeat;
-    background-position: bottom right;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-image: url("../../images/tel-menu.svg");
+      background-repeat: no-repeat;
+      background-position: bottom right;
     }
   }
 
