add about & content page

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -139,10 +139,15 @@
       top: 0;
       right: 0;
       bottom: 0;
-      background-image: url("../../images/tel-menu.svg");
+      background-image: url("../images/tel-menu.svg");
       background-repeat: no-repeat;
       background-position: bottom right;
+      overflow-x: hidden;
     }
+  }
+
+  .overflow{
+    overflow: hidden;
   }
 
   .menu__list {
