--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,3 +3,5 @@ $light-coral: #f67e7e;
 $white: #ffffff;
 $rapture-blue: #79C8C7;
 $police-blue: #2c6269;
+$sacramento-state-green: #012F34;
+$deep-jungle-green: #004047;  
