--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -7,14 +7,14 @@
 
   &::before{
     position: absolute;
-    top: 3.125rem;
-    left: calc(50% - 46.875rem);
+    top: 4rem;
+    left: calc(50% - 53.5rem);
     display: block;
-    width: 6.25rem;
+    width: 12.5rem;
     height: 12.5rem;
     background-image: url("../images/hero-left-bgi.svg");
     background-repeat: no-repeat;
-    background-size: 6.25rem 12.5rem;
+    background-size: 12.5rem;
     background-position: center;
     z-index: 1;
     content: "";
