--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,3 +5,4 @@ $rapture-blue: #79C8C7;
 $police-blue: #2c6269;
 $sacramento-state-green: #012F34;
 $deep-jungle-green: #004047;  
+$dark-green: #002529;
