--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,13 +1,195 @@
+.site-footer{
+  padding: 3rem 0;
+  background-color: $dark-green;
+}
+
+.footer__box{
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__left{
+  display: flex;
+}
+
+.footer__link-box{
+  margin-right: 7.813rem;
+}
+
+.footer__logo-link{
+  display: inline-block;
+  margin-bottom: 1.563rem;
+}
+
+.footer__logo-img{
+  width: 100%;
+}
+
+.footer__menu{
+  @include list-global;
+  @include flex-starter;
+}
+
+.footer__menu-item{
+  margin-right: 2.5rem;
+
+  &:nth-child(2){
+    margin-right: 0;
+  }
+}
+
+.footer__menu-link{
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-decoration: none;
+  color: $white;
+
+  &:hover{
+    color: $light-coral;
+  }
+}
+
+.footer__desc-box{
+  width: 100%;
+  max-width: 10.313rem;
+}
+
+.footer__desc{
+  margin: 0;
+  margin-bottom: 0.125rem;
+  font-weight: 600;
+  font-size: 0.938rem;
+  line-height: 1.563rem;
+  color: $white;  
+  opacity: 0.6;
+}
+
+.footer__right-link{
+  margin-bottom: 3.188rem;
+  text-align: right;
+}
+
+.footer__svg-link{
+  display: inline-block;
+  margin-right: 1rem;
+  vertical-align: middle;
+  text-decoration: none;
+  color: $white;
+
+  &:nth-child(3){
+    margin-right: 0;
+  }
+
+  &:hover{
+    color: $light-coral;
+  }
+}
+
+.footer__text{
+  margin: 0;
+  font-weight: 600;
+  font-size: 0.938rem;
+  line-height: 1.563rem;
+  color: $white;
+  opacity: 0.6;
+}
 
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) { 
-  
 
-  
-} 
+
+@media only screen and (max-width: 48rem) {
+
+  .site-footer{
+    padding: 3.5rem 0;
+  }
+
+  .footer__box{
+    flex-direction: column;
+  }
+
+  .footer__left{
+    justify-content: space-between;
+    margin-bottom: 2.125rem;
+  }
+
+  .footer__link-box{
+    margin-right: 0;
+  }
+
+  .footer__logo-link{
+    margin-bottom: 3.313rem;
+  }
+
+  .footer__logo-img{
+    max-width: 6rem;
+    max-height: 1.5rem;
+  }
+
+  .footer__right{
+    @include flex-starter;
+    justify-content: space-between;
+  }
+
+  .footer__right-link{
+    margin-bottom: 0;
+    text-align: start;
+  }
+
+  .footer__svg-link{
+    margin-right: 1rem;
+
+    &:nth-child(3){
+      margin-right: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 25.25rem) {
+
+  .footer__right{
+    flex-direction: column;
+  }
+
+  .footer__right-link{
+    margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (max-width: 23.438rem) {
+
+  .site-footer{
+    padding: 4.125rem 0 4rem 0;
+    text-align: center;
+  }
+
+  .footer__left{
+    flex-direction: column;
+    margin-right: auto;
+    margin-bottom: 2.5rem;
+    margin-left: auto;
+  }
+
+  .footer__link-box{
+    margin-bottom: 1.5rem;
+  }
+
+  .footer__logo-link{
+    margin-bottom: 1.5rem;
+  }
+
+  .footer__menu{
+    justify-content: space-between;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
