--- a/sass/blocks/_about-director.scss
+++ b/sass/blocks/_about-director.scss
@@ -34,6 +34,21 @@
   margin: 38px 15px;
   padding: 32px 24px 56px 24px;
   background-color: $sacramento-state-green;
+  transition: all 0.2s ease;
+
+  &:hover{
+    box-shadow: 0px 0px 25px #000;
+    z-index: 2;
+    transition: all 200ms ease-in;
+    transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
+    transition: all 200ms ease-in;
+    transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.10);
+    transition: all 0.2s ease;
+  }
 }
 
 .item__img{
